<resources>
    <string name="can_not_be_empty">Can not be empty</string>
    <string name="no_data">No Data</string>
    <string name="directory">Directory</string>
    <string name="selected_x_items">Selected %d Items</string>
    <string name="filename">File Name:</string>
    <string name="file_encoding">Encoding:</string>
    <string name="file_save">Save</string>
    <string name="root_path">Root</string>
    <string name="auto_detection_encoding">Auto detection encoding</string>
    <string name="illegal_filename">illegal filename</string>
    <string name="unknown_path">unknown path</string>
    <string name="open_file">Open File</string>
    <string name="save_file">Save File</string>
    <string name="override_file_prompt">%s exists，do you override it？</string>
    <string name="filter_by_name">Filter by Name</string>
    <string name="can_not_create_folder">Can not create folder</string>
    <string name="can_not_share_x">Can not share file: %s</string>
    <string name="cancel_select_all">Deselect All</string>
    <string name="copy">Copy</string>
    <string name="create_folder">Create folder</string>
    <string name="cut">Cut</string>
    <string name="delete">Delete</string>
    <string name="paste">Paste</string>
    <string name="rename">Rename</string>
    <string name="rename_fail">Rename failure</string>
    <string name="select_all">Select all</string>
    <string name="share">Share</string>
    <string name="show_hidden_files">Show hidden files</string>
    <string name="sort_by_datetime">Sort by Date</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="sort_by_size">Sort by Size</string>
    <string name="sort_by_type">Sort by Type</string>
    <string name="addToDictionary">Add to dictionary</string>
    <string name="deleteText">Delete Text</string>
    <string name="replace">Replace</string>
    <string name="selectAll">Select All</string>
    <string name="find">Find</string>
    <string name="app_name">Text Editor</string>
    <string name="new_file">New</string>
    <string name="open">Open</string>
    <string name="save">Save</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="save_all">Save All</string>
    <string name="save_as">Save as</string>
    <string name="recent_files">Recent files</string>
    <string name="line_separator">Line Break</string>
    <string name="duplication_line">Duplication line</string>
    <string name="jump_to_start">Jump to start</string>
    <string name="jump_to_end">Jump to end</string>
    <string name="goto_line">Go to line</string>
    <string name="cursor_back">Cursor back</string>
    <string name="cursor_forward">Cursor forward</string>
    <string name="document_info">Document Info</string>
    <string name="insert_color">Insert color</string>
    <string name="highlight_language">Highlight language</string>
    <string name="encoding">Encoding</string>
    <string name="read_only">Read only</string>
    <string name="insert_datetime">Insert datetime</string>
    <string name="run">Run</string>
    <string name="file">File</string>
    <string name="other">Other</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="new_filename">untitled %d</string>
    <string name="confirm_save">Confirm save</string>
    <string name="confirm_save_msg">Document %s has changed，do you want to save and exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cannt_access_file">Can not access file: %s</string>
    <string name="cannt_read_file">Can not read file: %s</string>
    <string name="ok">OK</string>
    <string name="read_file_exception">Occurs exception when read file</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="convert_wrap_char">Convert wrap char</string>
    <string name="path_x">Path: %s</string>
    <string name="char_x">Chars: %d</string>
    <string name="word_x">Words: %d</string>
    <string name="line_number_x">Line number: %d</string>
    <string name="encoding_x">Encoding: %s</string>
    <string name="tab">Tab</string>
    <string name="save_success">Save Success</string>
    <string name="find_label">Find What:</string>
    <string name="replace_label">Replace With:</string>
    <string name="case_sensitive">Case sensitive</string>
    <string name="whole_words_only">Whole words only</string>
    <string name="regex">Regular expression</string>
    <string name="in_path">In Path:</string>
    <string name="recursively">Recursively</string>
    <string name="cannot_be_empty">Can not be empty</string>
    <string name="path_not_exists">Path not exists</string>
    <string name="find_not_found">Not found</string>
    <string name="previous_occurrence">Previous Occurrence</string>
    <string name="next_occurrence">Next Occurrence</string>
    <string name="replace_all">Replace All</string>
    <string name="searching">Search…</string>
    <string name="select_lang_to_highlight">Select a language to highlight</string>
    <string name="more_menu">More menu</string>
    <string name="reopen_with_encoding">Reopen with encoding</string>
    <string name="document_changed">Document changed</string>
    <string name="give_up_document_changed_message">Document has changed, your changes will be lost if you don’t save them, confirm?</string>
    <string name="preview_in_browser">Preview in browser</string>
    <string name="use_sl4a_in_background_run_script">Use SL4A in background run script</string>
    <string name="use_sl4a_in_terminal_run_script">Use SL4A in terminal run script</string>
    <string name="please_save_as_file_first">lease save to file first</string>
    <string name="run_fail_message">Call external application failed</string>
    <string name="settings">Settings</string>
    <string name="editor">Editor</string>
    <string name="default_value">Default</string>
    <string name="font_size">Font Size</string>
    <string name="cursor_width">Cursor Width</string>
    <string name="touch_to_adjust_text_size">Touch to change text size</string>
    <string name="word_wrap_in_editor">Auto wordwrap</string>
    <string name="show_linenumber">Show Linenumber</string>
    <string name="show_whitespace">Show Whitespace</string>
    <string name="auto_indent">Auto Indent</string>
    <string name="insert_space_for_tab">Insert space for Tab</string>
    <string name="highlight_and_theme">Highlight and Theme</string>
    <string name="highlight_the_file_size_limit">Limit highlight file size</string>
    <string name="auto_save">Auto save file</string>
    <string name="remember_last_opened_files">Remember last opened files</string>
    <string name="remember_last_opened_files_summary">Auto open last opened files when startup</string>
    <string-array name="screen_orientation">
        <item>Auto</item>
        <item>Landscape</item>
        <item>Portrait</item>
    </string-array>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="auto_capitalize">Auto capitalize</string>
    <string name="feedback">Feedback</string>
    <string name="help_translate">Translate this application</string>
    <string name="about">About</string>
    <string name="enable_highlight">Enable highlight</string>
    <string name="need_to_enable_read_storage_permissions">Need to enable read storage permissions</string>
    <string name="file_not_exists">File not exists</string>
    <string name="cannt_handle_intent_x">Can not process intent: %s</string>
    <string name="handle_intent_x_error">An error occurred when process intent: %s</string>
    <string name="press_again_will_exit">Press again will exit</string>
    <string name="find_replace">Find/Replace</string>
    <string name="find_title">\"%s\" Find Results</string>
    <string name="zero_matches">0 matches</string>
    <string name="chooser_browser">Chooser browser</string>
    <string name="find_or_replace">Find/Replace…</string>
    <string name="other_application">Other application…</string>
    <string name="chooser_application">Chooser Application</string>
    <string name="convert_to_uppercase">Convert to uppercase</string>
    <string name="convert_to_lowercase">Convert to lowercase</string>
    <string name="duplication_text">Duplication text</string>
    <string name="tab_size">Tab size</string>
    <string name="auto_check_updates">Auto check updates</string>
    <string name="readonly_mode_not_support_this_action">Read-only mode does not support this action</string>
    <string name="enable_root">Enable Root</string>
    <string name="my_name">Author: Jecelyin Peng</string>
    <string name="open_with_external_browser">Open with external browser</string>
    <string name="writing">Writing</string>
    <string name="keyword">Keyword</string>
    <string name="find_keyword_is_empty">Keyword can not be empty</string>
    <plurals name="x_text_replaced">
        <item quantity="zero">0 found</item>
        <item quantity="other">%d text replaced</item>
    </plurals>
    <string-array name="wrap_char_list">
        <item>Convert to \\n（Linux/OSX）</item>
        <item>Convert to \\r\\n（Windows）</item>
    </string-array>
    <string name="exit">Exit</string>
    <string name="keep_backup_file">Keep a backup file</string>
    <string name="keep_backup_file_summary">Suggest you keep backup files, avoid file misses for exception</string>
    <string name="save_all_without_new_document_message">Save all will skip new document</string>
    <string name="clear_history">Clear History</string>
    <string name="custom_symbol_list">Custom symbol list</string>
    <string name="reset">Reset</string>
    <string name="change_theme">Change theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="default_theme">Default Theme</string>
    <string name="fullscreen_mode">Full screen Mode</string>
    <string name="enable_fullscreen_mode_message">Restart the application will enable the full screen mode</string>
    <string name="disabled_fullscreen_mode_message">Restart the application will disable the full screen mode</string>
    <string name="confirm_change_theme_message">Change theme will not auto save documents, you confirm discard document to change theme?</string>
    <string name="untitled_file_name">untitled.txt</string>
    <string name="editor_initialing">Editor initialing…</string>
    <string name="enable_drawers">Enable interaction with tab drawer and main menu drawer.</string>
    <string name="out_of_memory_error">Out of application memory</string>
    <string name="x_items_completed">%d items Completed</string>
    <string name="x_items_completed_and_error_x">%1$d items Completed, but has some items occur error: %2$s</string>
    <string name="find_log">Find Log</string>
    <string name="replace_log">Replace Log</string>
    <string name="use_regex_to_find_tip">Replace keyword support: \\r, \\n, \\t and capturing groups $0 ~ $9</string>
    <string name="editor_setting">Editor setting</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="create_new_file">Create new file</string>
    <string name="cannot_read_folder">Can not read folder</string>
    <string name="share_this_app">Share this app</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="path">Path</string>
    <string name="invalid_name">Invalid name</string>
    <string name="cannot_create_new_file">Cannot create file</string>
    <string name="not_a_text_file">The file %s seem like is not a text file. Do you want to open it?</string>
    <string name="home">Home</string>
    <string name="editor_theme">Editor theme [Pro]</string>
</resources>