<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/editor">

        <com.jecelyin.editor.v2.preference.FontSizePreference
            android:key="pref_font_size"
            android:summary="@string/default_value"
            android:title="@string/font_size" />
        <com.jecelyin.editor.v2.preference.CursorWidthPreference
            android:key="pref_cursor_width"
            android:summary="@string/default_value"
            android:title="@string/cursor_width" />

        <CheckBoxPreference
            android:key="pref_touch_to_adjust_text_size"
            android:title="@string/touch_to_adjust_text_size" />

        <CheckBoxPreference
            android:key="pref_word_wrap"
            android:title="@string/word_wrap_in_editor" />

        <CheckBoxPreference
            android:key="pref_show_linenumber"
            android:title="@string/show_linenumber" />

        <CheckBoxPreference
            android:key="pref_show_whitespace"
            android:title="@string/show_whitespace" />

        <CheckBoxPreference
            android:key="pref_auto_indent"
            android:title="@string/auto_indent" />

        <CheckBoxPreference
            android:key="pref_insert_space_for_tab"
            android:title="@string/insert_space_for_tab" />

        <com.afollestad.materialdialogs.prefs.MaterialEditTextPreference
            android:inputType="number"
            android:key="pref_tab_size"
            android:maxLength="1"
            android:singleLine="true"
            android:summary="4"
            android:title="@string/tab_size" />

        <CheckBoxPreference
            android:key="pref_auto_capitalize"
            android:title="@string/auto_capitalize" />


        <com.jecelyin.editor.v2.preference.SymbolBarPreference
            android:key="pref_symbol"
            android:maxLines="7"
            android:negativeButtonText="@string/reset"
            android:scrollbars="vertical"
            android:summary=""
            android:title="@string/custom_symbol_list" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/highlight_and_theme">
        <CheckBoxPreference
            android:key="pref_enable_highlight"
            android:title="@string/enable_highlight" />

        <com.afollestad.materialdialogs.prefs.MaterialEditTextPreference
            android:inputType="number"
            android:key="pref_highlight_file_size_limit"
            android:singleLine="true"
            android:summary="500 KB"
            android:title="@string/highlight_the_file_size_limit" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/other">

        <CheckBoxPreference
            android:key="pref_auto_save"
            android:title="@string/auto_save" />

        <CheckBoxPreference
            android:key="pref_remember_last_opened_files"
            android:summary="@string/remember_last_opened_files_summary"
            android:title="@string/remember_last_opened_files" />

        <CheckBoxPreference
            android:key="pref_keep_backup_file"
            android:summary="@string/keep_backup_file_summary"
            android:title="@string/keep_backup_file" />

        <com.jecelyin.editor.v2.preference.JecListPreference
            android:entries="@array/screen_orientation"
            android:entryValues="@array/screen_orientation_values"
            android:key="pref_screen_orientation"
            android:title="@string/screen_orientation" />

        <CheckBoxPreference
            android:key="pref_keep_screen_on"
            android:title="@string/keep_screen_on" />

        <CheckBoxPreference
            android:key="pref_enable_root"
            android:title="@string/enable_root" />

        <CheckBoxPreference
            android:key="pref_enable_drawers"
            android:title="@string/enable_drawers" />

    </PreferenceCategory>

    <CheckBoxPreference
        android:key="pref_auto_check_updates"
        android:title="@string/auto_check_updates" />

    <!--<Preference-->
    <!--android:key="pref_donate"-->
    <!--android:title="@string/donate" />-->

    <Preference
        android:key="pref_feedback"
        android:title="@string/feedback" />

    <Preference
        android:key="pref_translate"
        android:title="@string/help_translate" />

    <Preference
        android:key="pref_about"
        android:title="@string/about" />
</PreferenceScreen>
