<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2016 Jecelyin Peng <jecelyin@gmail.com>
  ~
  ~ This file is part of 920 Text Editor.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_goto_home"
        android:icon="@drawable/baseline_home_24"
        android:title="Home"
        app:showAsAction="always" />

    <item
        android:id="@+id/add_folder_menu"
        android:icon="@drawable/ic_add_folder"
        android:title="@string/create_folder"
        app:showAsAction="always" />

    <item
        android:id="@+id/paste_menu"
        android:title="@string/paste"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/show_hidden_files_menu"
        android:checkable="true"
        android:checked="false"
        android:title="@string/show_hidden_files"
        app:showAsAction="never" />
    <group
        android:id="@+id/sort_group_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/sort_by_name_menu"
            android:checked="true"
            android:title="@string/sort_by_name"
            app:showAsAction="never" />
        <item
            android:id="@+id/sort_by_datetime_menu"
            android:checked="false"
            android:title="@string/sort_by_datetime"
            app:showAsAction="never" />
        <item
            android:id="@+id/sort_by_size_menu"
            android:checked="false"
            android:title="@string/sort_by_size"
            app:showAsAction="never" />
        <item
            android:id="@+id/sort_by_type_menu"
            android:checked="false"
            android:title="@string/sort_by_type"
            app:showAsAction="never" />
    </group>
</menu>