<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <com.jecelyin.common.widget.DrawClickableEditText
            android:id="@+id/find_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_arrow_drop_down_black"
            android:hint="@string/find_label" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/replace_check_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/replace" />

        <com.jecelyin.common.widget.DrawClickableEditText
            android:id="@+id/replace_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_arrow_drop_down_black"
            android:hint="@string/replace_label" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/case_sensitive_check_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/case_sensitive" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/whole_words_only_check_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whole_words_only" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/regex_check_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regex" />

    </LinearLayout>
</ScrollView>
